--- a/RealTimeAndEmbeddedSystems/Course-Project/README
+++ b/RealTimeAndEmbeddedSystems/Course-Project/README
@@ -1,5 +1,11 @@
-The YAHS/BIHS project was done by:
-	** Ameer Alkam  -- 1120217
-	** Ali Alnubani -- 1120130
-	** Weam Mikkawi -- 1120442
-Supervidsed by: Dr. Ahmed Afaneh
+# YAHS/BIHS
+
+## The YAHS/BIHS project was done by:
+###	** Ameer Alkam  -- 1120217
+###	** Ali Alnubani -- 1120130
+###	** Weam Mikkawi -- 1120442
+## upervidsed by: Dr. Ahmed Afaneh
+
+A simple HTTP server software written in C as a Real Time system project, extremely basic with only respondes 200 and 404.
+
+The implementation isn't the best out there, and there are a bunch of bugs, here and there, I may get to rewrite it at a later point of time (I actually began rewriting it, but I'm too lazy so yea)
